syntax = "proto2";

package sf.solana.wallet.positions.dex.trades.v1;

message Output {
  repeated WalletPositionDexTradeData data = 1;
}

message WalletPositionDexTradeData {
  required string block_date = 1;
  required int64 block_time = 2;
  required string tx_id = 3;
  required string trader = 4;
  required double trader_sol_change = 5;
  required string buy_mint = 6;
  required string sell_mint = 7;
  required double buy_amount = 8;
  required double sell_amount = 9;
  required uint64 txn_fee_lamports = 10;
}

message TraderTokenBalanceChange {
  required string mint = 1;
  required double amount = 2;
}